# Black-Stocks

./: app.py  app2.py  données_boursières.csv  pyproject.toml  run.sh  stocks.py  test.ipynb
