[project]
name = "stock"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "plotly>=6.0.1",
    "streamlit>=1.43.2",
    "streamlit-plotly-events>=0.0.6",
    "yfinance>=0.2.54",
]
